[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[project]
name = "compute_ssl_feats"
version = "0.0.1"
authors = [
  { name="Li Wei Chen", email="wayne900619@gmail.com" },
]
description = "A kaldi compute-mfcc-feats replacement with ssl model"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
  "str2bool ~= 1.1",
  "kaldiio ~= 2.18.0",
  "soundfile ~= 0.12.1",
  "numpy >= 1.24",
  "transformers[torch] ~= 4.31.0",
  "torch ~= 1.13.1", 
]

[project.scripts]
compute-ssl-feats = "compute_ssl_feats.cli:entrypoint"
